--- a/2024/src/app/maintainers/maintainers-mobile/maintainers.component.html
+++ b/2024/src/app/maintainers/maintainers-mobile/maintainers.component.html
@@ -5,14 +5,8 @@
     <div class="right-arrow" (click)="shiftRight()">
         <img src="../../../assets/images/right-arrow-purple.png">
     </div>
-    <div class="title" style="margin: 3.5rem 0;">Programação</div>
+    <div class="title" style="margin: 3.5rem 0;">Organizadores</div>
     <div class="maintainers-cards">
-        <div class="card-background" *ngIf="maintainer">
-            <div class="card" style="background-image: url('{{ maintainer.image_address }}');">
-            </div>
-        </div>
-    </div>
-    <div class="maintainers-fake-cards">
         <div class="card-background" *ngIf="maintainer">
             <div class="card" style="background-image: url('{{ maintainer.image_address }}');">
             </div>
