--- a/2024/src/app/nav-bar/menu/menu.component.html
+++ b/2024/src/app/nav-bar/menu/menu.component.html
@@ -6,10 +6,15 @@
     <ul class="list">
         <li class="list-item" (click)="scrollDown('about')"><a>Sobre</a></li>
         <li class="separator"></li>
+        <li class="list-item" (click)="scrollDown('palestrantes')"><a>Palestrantes</a></li>
+        <li class="separator"></li>
         <li class="list-item" (click)="scrollDown('schedule')"><a>Programação</a></li>
         <li class="separator"></li>
         <li class="list-item" (click)="goToUrl('https://www.even3.com.br/manguebit-2024-438948/')"><a style="text-decoration: none; color: white;">Inscrição</a></li>
         <li class="separator"></li>
         <li class="list-item" (click)="scrollDown('partners')"><a>Patrocínio</a></li>
+        <li class="separator"></li>
+        <li class="list-item" (click)="scrollDown('maintainers')"><a>Organizadores</a></li>
+        
     </ul>
 </div>
