--- a/2024/src/app/banner/banner/banner.component.scss
+++ b/2024/src/app/banner/banner/banner.component.scss
@@ -7,6 +7,9 @@
     align-items: center;
     justify-content: center;
     padding: 70px 0 0 0;
+    @media (max-width: 1100px) {
+        padding: 4rem 0 0 0;
+    }
     @media (max-width: 580px) {
         padding: 0;
     }
