--- a/2024/src/app/footer/footer/footer.component.scss
+++ b/2024/src/app/footer/footer/footer.component.scss
@@ -59,7 +59,7 @@
             width: 6rem;
             margin: 0 0 0 1rem;
             @media (max-width: 1024px) {
-                margin: 1.5rem 0 0 0;
+                margin: 0.5rem 0 1rem 0;
             }
             @media (max-width: 410px) {
                 width: 6rem;
