--- a/2024/src/app/nav-bar/bar/bar.component.scss
+++ b/2024/src/app/nav-bar/bar/bar.component.scss
@@ -11,13 +11,7 @@
     height: 70px;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
     z-index: +3;
-    @media (max-width: 1024px) {
-        justify-content: center;
-    }
-    @media (max-width: 590px) {
-        justify-content: flex-start;
-    }
-    @media (max-width: 580px) {
+    @media (max-width: 1100px) {
         position: fixed;
         justify-content: space-between;
         height: 0px;
@@ -37,7 +31,7 @@
         cursor: pointer;
         box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
         @media (max-width: 1024px) {
-            position: absolute;
+            // position: absolute;
             right: 2rem;
             flex: 0;
         }
