--- a/2024/src/app/video/video.component.scss
+++ b/2024/src/app/video/video.component.scss
@@ -7,8 +7,12 @@
     justify-content: center;
     width: 100%;
     background-color: $main-green;
-    min-height: 40rem;
-    height: 40rem;
+    height: 50rem;
+    padding: 5rem 0;
+    @media (max-width: 580px ) {
+        height: 20rem;
+        padding: 0 0;
+    }
     .crabs {
         display: flex;
         width: 80%;
@@ -19,8 +23,13 @@
         }
     }
     .video {
-        width: 78%;
-        min-height: 50%;
-        border: 4px solid $main-purple;
+        width: 60%;
+        min-height: 60%;
+        iframe {
+            border: 8px solid $main-purple;
+        }
+        @media (max-width: 580px) {
+            min-height: 40%;
+        }
     }
 }
