--- a/2024/src/app/video/video.component.scss
+++ b/2024/src/app/video/video.component.scss
@@ -6,21 +6,11 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    background-color: $main-green;
-    height: 50rem;
-    padding: 5rem 0;
+    background-color: $main-blue;
+    height: 40rem;
     @media (max-width: 580px ) {
         height: 20rem;
         padding: 0 0;
-    }
-    .crabs {
-        display: flex;
-        width: 80%;
-        align-items: center;
-        justify-content: space-between;
-        img {
-            width: 15%;
-        }
     }
     .video {
         width: 60%;
