Slide left and right started, daus logo updated, luan took out from maintainers

--- a/2024/src/app/app.component.html
+++ b/2024/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet>
+<div (click)="clickListener($event)">
+    <app-nav-bar></app-nav-bar>
+    <router-outlet>
 
-</router-outlet>
-<app-footer></app-footer>
+    </router-outlet>
+    <app-footer></app-footer>
+</div>
