--- a/2024/src/app/nav-bar/menu/menu.component.html
+++ b/2024/src/app/nav-bar/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="menu-button" (click)="openDropdownMenu()">
-    <img class="button" src="../../../assets/images/menu-button.png">
+    <img class="hamburguer-button" src="../../../assets/images/menu-button.png">
 </div>
 
 <div class="menu-list">
