--- a/2024/src/app/nav-bar/menu/menu.component.scss
+++ b/2024/src/app/nav-bar/menu/menu.component.scss
@@ -9,7 +9,7 @@
     @media (max-width: 1100px) {
         display: flex;
     }
-    .button {
+    .hamburguer-button {
         width: 3.7rem;
         padding: 0.5rem 0 0 0;
     }
