--- a/2024/src/app/speakers/speakers-tablet/speakers-tablet.component.scss
+++ b/2024/src/app/speakers/speakers-tablet/speakers-tablet.component.scss
@@ -44,6 +44,7 @@
             width: 100%;
             align-items: center;
             justify-content: center;
+            pointer-events: none;
             .card {
                 display: flex;
                 align-items: center;
