Video section improved, new speakers and parteners added, maintainers section and menu improved

--- a/2024/src/app/speakers/speakers-mobile/speakers-mobile.component.scss
+++ b/2024/src/app/speakers/speakers-mobile/speakers-mobile.component.scss
@@ -45,6 +45,7 @@
             width: 80%;
             align-items: center;
             justify-content: center;
+            pointer-events: none;
             .card {
                 display: flex;
                 align-items: center;
