--- a/2024/src/app/speakers/speakers-desktop/speakers.component.scss
+++ b/2024/src/app/speakers/speakers-desktop/speakers.component.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 0 0 5rem 0;
     background-image: url('../../../assets/images/IDV-Mangue_BACKGROUND.png');
     background-repeat: repeat;
