--- a/2024/src/app/maintainers/maintainers-desktop/maintainers-desktop.component.scss
+++ b/2024/src/app/maintainers/maintainers-desktop/maintainers-desktop.component.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 0 0 5rem 0;
     .title {
         font-family: $exo;
