Video section improved, speakers added and maintainers and speakers section improved

--- a/2024/src/app/footer/footer/footer.component.html
+++ b/2024/src/app/footer/footer/footer.component.html
@@ -7,5 +7,5 @@
 </div>
 <div class="site-ending">
     <div style="text-align: center;">© Copyright Manguezal. All Rights Reserved.</div>
-    <div style="text-align: center;">Designed and developed by Studio Daus</div>
+    <div style="text-align: center;">Designed and developed by <a href="https://bio.site/studiodaus" target="_blank" style="color: white;">Studio Daus</a></div>
 </div>
